--- a/requirements.txt
+++ b/requirements.txt
@@ -64,12 +64,51 @@ starlette==0.46.0
 tensorboard==2.15.2
 tensorboard-data-server==0.7.2
 tensorboard-plugin-wit==1.8.1
-tensorflow
+tensorflow==2.15.0
 tensorflow-estimator==2.15.0
 tensorflow-hub==0.16.1
+requests-oauthlib==2.0.0
+rich==13.9.4
+rsa==4.9
+scikit-learn==1.6.1
+scipy==1.15.2
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+starlette==0.46.0
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-hub==0.16.1
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+starlette==0.46.0
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-hub==0.16.1
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-hub==0.16.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-hub==0.16.1
+tensorflow-estimator==2.15.0
+tensorflow-hub==0.16.1
+tensorflow-hub==0.16.1
+tensorflow-intel==2.15.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.5.0
-tf_keras
+tf_keras==2.15.1
 threadpoolctl==3.5.0
 tqdm==4.67.1
 typing_extensions==4.12.2
